linked blogs to home page

--- a/index.html
+++ b/index.html
@@ -7,19 +7,12 @@
   </head>
 
   <body>
-    <h1></h1>
-    <h2><em></em></h2>
+    <a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html"> Reflection Blog</a>
+    <a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits Blog</a>
+    <h2></h2>
     <h3></h3>
 
-    <p>
 
-    </p>
-    <p>
-
-    </p>
-    <p>
-
-    </p>
 
     <!-- this is a comment. -->
 
