--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
 
   <body>
-    <a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html"> Reflection Blog</a>
-    <a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits Blog</a>
-    <h2></h2>
-    <h3></h3>
+    <h1>Emily Parkes' Homepage</h1>
+    <h2><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html"> Reflection Blog</a><h2>
+    <h2><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits Blog</a><h2>
+
 
 
 
