--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1 class= "title">Emily Parkes' Homepage</h1>
-    <h3 class= "description">A website I've created to learn Web Development</h3>
+    <!-- <h3 class= "description">A website I've created to learn Web Development</h3>-->
     <h2 class= "post 1"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html"> Reflection Blog</a>
     <h2 class= "post 2"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits Blog</a>
 
