--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Emily's Webpage</title>
-    <link href="styles/main.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
+<head>
+  <title>Emily's Webpage</title>
+  <link href="styles/main.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+  <h1 class= "title">Emily Parkes' Homepage</h1>
+  <!-- <h3 class= "description">A website I've created to learn Web Development</h3>-->
 
-    <h1 class= "title">Emily Parkes' Homepage</h1>
-    <!-- <h3 class= "description">A website I've created to learn Web Development</h3>-->
-<div class="banner">
-    <img class="banner image" src="image/landscape.jpeg">
-<h2 class= "post 1"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html"> Reflection Blog</a>
-<h2 class= "post 2"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits Blog</a>
-
-
+  <div class="blog">
+    <div class="post 1"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html"> Reflection Blog</a></div>
+    <div class="post 2"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits Blog</a></div>
+  </div>
 
 
-    <!-- this is a comment. -->
-
-  </body>
+<!-- this is a comment. -->
+</body>
 </html>
