--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- <h3 class= "description">A website I've created to learn Web Development</h3>-->
 
   <div class="blog">
-    <div class="post 1"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html"> Reflection Blog</a></div>
-    <div class="post 2"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits Blog</a></div>
+    <h2 class="post 1"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html"> Reflection Blog</a></h2>
+    <h2 class="post 2"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits Blog</a></h2>
   </div>
 
 
