--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
   <h1 class= "title">Emily Parkes' Homepage</h1>
   <!-- <h3 class= "description">A website I've created to learn Web Development</h3>-->
+  <div class="banner">
+    <img class="banner-image" src="img/landscape.jpeg">
+  </div>
 
   <div class="blog">
     <h2 class="post 1"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html"> Reflection Blog</a></h2>
