--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1 class= "title">Emily Parkes' Homepage</h1>
   <!-- <h3 class= "description">A website I've created to learn Web Development</h3>-->
   <div class="banner">
-    <img class="banner-image" src="img/landscape.jpeg">
+    <img class="banner-image" src="image/landscape.jpeg">
   </div>
 
   <div class="blog">
