--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h2 class="post 2"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits Blog</a></h2>
     <h2 class="post 3"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html"> HTML, CSS and DOM Part 1</a></h2>
     <h2 class="post 4"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html"> HTML, CSS and DOM Part 2</a></h2>
+    <h2 class="post 5"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html"> Emotional Intelligence</a></h2>
   </div>
 
 
