--- a/index.html
+++ b/index.html
@@ -1,25 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Emily's Webpage</title>
-  <link href="styles/main.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-  <!-- <h3 class= "description">A website I've created to learn Web Development</h3>-->
-  <header class="banner">
-    <h1 class= "title">Emily Parkes' Homepage</h1>
-  </header>
+  <head>
+    <title></title>
+    <meta charset="UTF-8">
 
-  <div class="blog">
-    <h2 class="post 1"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html"> Reflection Blog</a></h2>
-    <h2 class="post 2"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html"> Time and Habits Blog</a></h2>
-    <h2 class="post 3"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html"> HTML, CSS and DOM Part 1</a></h2>
-    <h2 class="post 4"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html"> HTML, CSS and DOM Part 2</a></h2>
-    <h2 class="post 5"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html"> Emotional Intelligence</a></h2>
-  </div>
+  </head>
+  <body>
 
-
-
-</body>
+  </body>
 </html>
-<!-- this is a comment. -->
