--- a/index.html
+++ b/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-    <meta charset="UTF-8">
+<head>
+  <title>Emily Parkes' Webpage</title>
+  <meta charset="UTF-8">
+  <link href="styles/main.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 
-  </head>
-  <body>
 
-  </body>
+</head>
+
+<body>
+  <header class="banner">
+    <h1 class="title">Emily Parkes</h1>
+    <h3 class="summary">Web Development Student</h3>
+  </header>
+
+  <div class="row 1">
+    <div class="column 1">
+      Left Column
+      <h2 class="post 1"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html">
+        HTML, CSS and DOM Part 1</a></h2>
+      <h2 class="post 2"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
+        HTML, CSS and DOM Part 2</a></h2>
+      </div>
+      <div class="column 2">
+        Right Column
+        <h2 class="post 1"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
+          Reflection Blog</a></h2>
+        <h2 class="post 2"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
+          Time and Habits Blog</a></h2>
+        <h2 class="post 3"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
+          Emotional Intelligence</a></h2>
+        </div>
+      </div>
+
+
+
+
+
+  <div class="row 2">
+    <div class="footer">
+      <p><!--this is a comment--></p>
+      <p><!--this is a comment--></p>
+    </div>
+  </div>
+
+
+</body>
 </html>
+
+<!--this is a comment!-->
