--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 
   <div class="row 1">
     <div class="column 1">
-      Left Column
+      <!--Left Column-->
       <h2 class="post 1"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html">
         HTML, CSS and DOM Part 1</a></h2>
       <h2 class="post 2"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
         HTML, CSS and DOM Part 2</a></h2>
       </div>
-      <div class="column 2">
-        Right Column
-        <h2 class="post 1"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
-          Reflection Blog</a></h2>
-        <h2 class="post 2"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
-          Time and Habits Blog</a></h2>
-        <h2 class="post 3"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
-          Emotional Intelligence</a></h2>
-        </div>
+    <div class="column 2">
+      <!--Right Column-->
+      <h2 class="post 1"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
+        Reflection Blog</a></h2>
+      <h2 class="post 2"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
+        Time and Habits Blog</a></h2>
+      <h2 class="post 3"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
+        Emotional Intelligence</a></h2>
       </div>
+    </div>
 
 
 
