--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <h3 class="summary">Web Development Student</h3>
   </header>
 
-  <div class="row 1">
+  <div class="nav">
+    <!--Home Button and linkedin Profile-->
+  </div>
+
+  <div class="blogposts">
     <div class="column 1">
       <!--Left Column-->
       <h2 class="post 1"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html">
