--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <link href="styles/main.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
-
-
 </head>
 
 <body>
+
   <header class="banner">
   <h1 class="title">Emily Parkes</h1>
   <h3 class="summary">Web Development Student</h3>
@@ -21,6 +20,7 @@
  </div>
 
   <div class="grid">
+
     <div class="row">
       <div class="col-6">
         <!--6 columns wide-->
@@ -29,32 +29,35 @@
       </div>
       <div class="col-12">
       <!--next 6 columns wide-->
-      <h2 class="post 1"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
+      <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
         Reflection Blog</a></h2>
      </div>
+   </div>
 
      <div class="row">
        <div class="col-6">
          <!--6 columns wide-->
-         <h2 class="post 2"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
+         <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
            HTML, CSS and DOM Part 2</a></h2>
        </div>
        <div class="col-12">
        <!--next 6 columns wide-->
-        <h2 class="post 2"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
+        <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
           Time and Habits Blog</a></h2>
       </div>
+    </div>
 
       <div class="row">
         <div class="col-6">
           <!--6 columns wide-->
-
         </div>
         <div class="col-12">
         <!--next 6 columns wide-->
-        <h2 class="post 3"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
+        <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
           Emotional Intelligence</a></h2>
        </div>
+     </div>
+
   </div>
 
   <div class="footer">
