--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           </div>
 
  <div class="footer">
-   <p><!--copyright--></p>
-   <p><!--contact email--></p>
+   <p>© Emily Parkes 2017</p>
+   <p>Contact: /name@email.com/</p>s
  </div>
 
 
