--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="grid">
-    <div class="row 1">
+    <div class="row">
       <div class="col-6">
         <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html">
           HTML, CSS and DOM Part 1</a></h2>
@@ -28,7 +28,7 @@
           Reflection Blog</a></h2>
         </div>
       </div>
-      <div class="row 2">
+      <div class="row">
         <div class="col-6">
           <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
             HTML, CSS and DOM Part 2</a></h2>
@@ -36,7 +36,7 @@
             Time and Habits Blog</a></h2>
           </div>
         </div>
-        <div class="row 3">
+        <div class="row">
             <div class="col-6">
               <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
                 Emotional Intelligence</a></h2>
