--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!--Home Button and linkedin Profile-->
   </div>
 
-  <div class="grid">
+  <main>
+    <!--row 1-->
     <div class="row">
       <div class="col-6">
         <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html">
@@ -28,6 +29,7 @@
           Reflection Blog</a></h2>
         </div>
       </div>
+      <!--row 2-->
       <div class="row">
         <div class="col-6">
           <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
@@ -36,17 +38,17 @@
             Time and Habits Blog</a></h2>
           </div>
         </div>
+        <!--row 3-->
         <div class="row">
             <div class="col-6">
               <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
                 Emotional Intelligence</a></h2>
               </div>
             </div>
-          </div>
+          </main>
 
  <div class="footer">
-   <p>© Emily Parkes 2017</p>
-   <p>Contact: /name@email.com/</p>s
+   <p>© Emily Parkes 2017 | Contact: /name@email.com/</p>
  </div>
 
 
