--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 <body>
 
   <header class="banner">
-    <h1 class="title">Emily Parkes</h1>
-    <h3 class="summary">Web Development Student</h3>
+    <div class="row">
+      <div class="col-6">
+        <img src="http://placehold.it/400x400">
+        <h1 class="title">Emily Parkes</h1>
+        <h3 class="summary">Web Development Student</h3>
+      </div>
+    </div>
   </header>
 
   <div class="nav">
@@ -23,25 +28,25 @@
     <!--row 1-->
     <div class="row">
       <div class="col-6">
-        <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html">
+        <h2 class="blogpost1"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html">
           HTML, CSS and DOM Part 1</a></h2>
-        <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
+        <h2 class="blogpost2"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
           Reflection Blog</a></h2>
         </div>
       </div>
       <!--row 2-->
       <div class="row">
         <div class="col-6">
-          <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
+          <h2 class="blogpost3"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
             HTML, CSS and DOM Part 2</a></h2>
-          <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
+          <h2 class="blogpost4"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
             Time and Habits Blog</a></h2>
           </div>
         </div>
         <!--row 3-->
         <div class="row">
             <div class="col-6">
-              <h2 class="blogpost"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
+              <h2 class="blogpost6"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
                 Emotional Intelligence</a></h2>
               </div>
             </div>
