--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
       <div class="col-6">
         <h2 class="blogpost1"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html">
           HTML, CSS and DOM Part 1</a></h2>
-        <h2 class="blogpost2"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
-          Reflection Blog</a></h2>
+        </div>
+      </div class="col-12">
+      <h2 class="blogpost2"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
+        Reflection Blog</a></h2>
         </div>
       </div>
       <!--row 2-->
@@ -39,8 +41,10 @@
         <div class="col-6">
           <h2 class="blogpost3"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
             HTML, CSS and DOM Part 2</a></h2>
-          <h2 class="blogpost4"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
-            Time and Habits Blog</a></h2>
+          </div>
+          <div class="col-12">
+            <h2 class="blogpost4"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
+              Time and Habits Blog</a></h2>
           </div>
         </div>
         <!--row 3-->
