column changes fix

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
   <header class="banner">
     <div class="row">
-      <div class="col-6">
-        <img src="http://placehold.it/400x400">
+        <img src="http://placehold.it/100x100">
         <h1 class="title">Emily Parkes</h1>
         <h3 class="summary">Web Development Student</h3>
-      </div>
     </div>
   </header>
 
   <div class="nav">
-    <!--Home Button and linkedin Profile-->
+    <div class="row">
+      <!--Home Button and linkedin Profile-->
+    </div>
   </div>
 
   <main>
