--- a/index.html
+++ b/index.html
@@ -18,39 +18,43 @@
 
   <div class="nav">
     <div class="row">
-      <!--Home Button and linkedin Profile-->
+      <!--Home Button and linkedin Profile etc-->
     </div>
   </div>
 
   <main>
     <!--row 1-->
     <div class="row">
-      <div class="col-6">
+      <div class=".one-half.column">
         <h2 class="blogpost3"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html">
           HTML, CSS and DOM Part 1</a></h2>
         </div>
-      <div class="col-12">
+      <div class=".one-half.column">
         <h2 class="blogpost4"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
           Reflection Blog</a></h2>
         </div>
     </div>
       <!--row 2-->
     <div class="row">
-      <div class="col-6">
+      <div class=".one-half.column">
         <h2 class="blogpost3"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
           HTML, CSS and DOM Part 2</a></h2>
         </div>
-      <div class="col-12">
+      <div class=".one-half.column">
         <h2 class="blogpost4"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
           Time and Habits Blog</a></h2>
         </div>
     </div>
     <!--row 3-->
     <div class="row">
-      <div class="col-6">
-        <h2 class="blogpost6"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
-          Emotional Intelligence</a></h2>
+      <div class=".one-half.column">
+        <h2 class="blogpost5"><a href="">
+          </a></h2>
         </div>
+        <div class=".one-half.column">
+          <h2 class="blogpost6"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
+            Emotional Intelligence</a></h2>
+          </div>
       </div>
   </main>
 
