--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 <body>
 
   <header class="banner">
-        <img src="http://placehold.it/100x100">
+        <img class ="me" src="http://placehold.it/100x100">
         <h1 class="title">Emily Parkes</h1>
-        <h3 class="summary">Web Development Student</h3>
+        <h5 class="summary">Web Development Student</h5>
   </header>
 
-  <div class="nav">
-    <div class="row">
-      <!--Home Button and linkedin Profile etc-->
-    </div>
-  </div>
+  <ul class="nav">
+    <li><a href="a">Home</a></li>
+    <li><a href="a">About</a></li>
+    <li><a href="a">Portfolio</a></li>
+    <li><a href="a">Contact</a></li>
+  </ul>
 
   <main>
     <!--row 1-->
