delete p and update link styles

--- a/index.html
+++ b/index.html
@@ -27,40 +27,40 @@
     <!--row 1-->
     <div class="row">
       <div class=".one-half.column">
-        <h5 class="blogpost3"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html">
+        <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p1.html">
           HTML, CSS and DOM Part 1</a></h5>
         </div>
       <div class=".one-half.column">
-        <h5 class="blogpost4"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
+        <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c1-reflection-blog.html">
           Reflection Blog</a></h5>
         </div>
     </div>
       <!--row 2-->
     <div class="row">
       <div class=".one-half.column">
-        <h5 class="blogpost3"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
+        <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/t2-html-css-dom-p2.html">
           HTML, CSS and DOM Part 2</a></h5>
         </div>
       <div class=".one-half.column">
-        <h5 class="blogpost4"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
+        <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c1-time-and-habits-blog.html">
           Time and Habits Blog</a></h5>
         </div>
     </div>
     <!--row 3-->
     <div class="row">
       <div class=".one-half.column">
-        <h5 class="blogpost5"><a href="">
+        <h5 class="blogpost"><a href="">
         </a></h5>
         </div>
         <div class=".one-half.column">
-          <h5 class="blogpost6"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
+          <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
             Emotional Intelligence</a></h5>
           </div>
       </div>
   </main>
 
  <div class="footer">
-   <p>© Emily Parkes 2017 | Contact: /name@email.com/</p>
+   <p>© Emily Parkes 2017</p>
  </div>
 
 
