attempt circular image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="banner">
-        <img class ="me" src="http://placehold.it/100x100">
+        <img class ="img-circle" src="http://placehold.it/100x100">
         <h1 class="title">Emily Parkes</h1>
         <h5 class="summary">Web Development Student</h5>
   </header>
