--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!--row 3-->
     <div class="row">
       <div class=".one-half.column">
-        <h5 class="blogpost"><a href="">
+        <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/blog-template.html">
         </a></h5>
         </div>
         <div class=".one-half.column">
