change heading size

--- a/blog-template.html
+++ b/blog-template.html
@@ -26,10 +26,10 @@
       <!--row 1-->
       <div class="row">
         <div class=".one.column">
-          <h1>Title</h1>
-          <h2>Date</h2>
-          <h3>question</h3>
-          <p>answer</p>
+          <h4>Title</h4>
+          <h5>Date</h5>
+          <h6>Question</h6>
+          <p>Answer</p>
 
 
   </body>
