--- a/blog-template.html
+++ b/blog-template.html
@@ -25,10 +25,12 @@
     <main>
       <!--row 1-->
       <div class="row">
-        <h4>Title</h4>
-        <h5>Date</h5>
-        <h6>Question</h6>
-        <p>Answer</p>
+        <ul class="bigpost">
+          <li><h4>Title</h4></li>
+          <li><h5>Date</h5></li>
+          <li><h6>Question</h6></li>
+          <li><p>Answer</p></li>
+        </ul>
 
 
   </body>
