create new style for blog header

--- a/blog-template.html
+++ b/blog-template.html
@@ -25,12 +25,12 @@
     <main>
       <!--row 1-->
       <div class="row">
-        <ul class="bigpost">
-          <li><h4>Title</h4></li>
-          <li><h5>Date</h5></li>
-          <li><h6>Question</h6></li>
-          <li><p>Answer</p></li>
-        </ul>
+        <div class="bigpost">
+          <h4>Title</h4>
+          <h5>Date</h5>
+          <h6>Question</h6>
+          <p>Answer</p>
+        </div>
 
 
   </body>
