fix header margins

--- a/blog-template.html
+++ b/blog-template.html
@@ -26,10 +26,10 @@
       <!--row 1-->
       <div class="row">
         <div class="bigpost">
-          <h4>Title</h4>
-          <h5>Date</h5>
-          <h6>Question</h6>
-          <p>Answer</p>
+          <h4>Technical Post</h4>
+          <h5 class="date">01 Sept 17</h5>
+          <h6>How did you...?</h6>
+          <p>I did this by...</p>
         </div>
 
 
