link blog to index and make live

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     <!--row 3-->
     <div class="row">
       <div class=".one-half.column">
-        <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/blog-template.html">
-        </a></h5>
+        <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/t3-design-to-web-blog.html">
+          Design to Web</a></h5>
         </div>
-        <div class=".one-half.column">
-          <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
-            Emotional Intelligence</a></h5>
-          </div>
+      <div class=".one-half.column">
+        <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c2-emotional-intelligence.html">
+          Emotional Intelligence</a></h5>
+        </div>
       </div>
   </main>
 
