--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
           Emotional Intelligence</a></h5>
         </div>
       </div>
+
+      <!--row 4-->
+      <div class="row">
+        <div class=".one-half.column">
+          <h5 class="blogpost"><a href="">
+            <!--Design to Web--></a></h5>
+          </div>
+        <div class=".one-half.column">
+          <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c3-meditation-process.html">
+            Meditation Process</a></h5>
+          </div>
+        </div>
   </main>
 
  <div class="footer">
