--- a/index.html
+++ b/index.html
@@ -70,7 +70,19 @@
           </div>
         </div>
 
-        
+        <!--row 5-->
+        <div class="row">
+          <div class=".one-half.column">
+            <h5 class="blogpost"><a href="">
+              </a></h5>
+            </div>
+          <div class=".one-half.column">
+            <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c4-daily-mindfulness.html">
+              Daily Mindfulness</a></h5>
+            </div>
+          </div>
+
+
   </main>
 
  <div class="footer">
