add self confidence link

--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
             </div>
           </div>
 
+          <!--row 6-->
+          <div class="row">
+            <div class=".one-half.column">
+              <h5 class="blogpost"><a href="">
+                </a></h5>
+              </div>
+            <div class=".one-half.column">
+              <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c5-self-confidence.html">
+                Self Confidence</a></h5>
+              </div>
+            </div>
+
 
   </main>
 
