--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <!--row 5-->
         <div class="row">
           <div class=".one-half.column">
-            <h5 class="blogpost"><a href="">
-              </a></h5>
+            <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/t5-problem-solving.html">
+            </a>Problem Solving</h5>
             </div>
           <div class=".one-half.column">
             <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c4-daily-mindfulness.html">
