--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
               </div>
             </div>
 
+            <!--row 7-->
+            <div class="row">
+              <div class=".one-half.column">
+                <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c6-control.html">
+                  Control</a></h5>
+                </div>
+              <div class=".one-half.column">
+                <h5 class="blogpost"><a href="">
+                  </a></h5>
+                </div>
+              </div>
+
+
 
   </main>
 
