--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           <!--row 6-->
           <div class="row">
             <div class=".one-half.column">
-              <h5 class="blogpost"><a href="">
-                </a></h5>
+              <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/t6-js-language.html">
+                JavaScript Language</a></h5>
               </div>
             <div class=".one-half.column">
               <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c5-self-confidence.html">
@@ -105,6 +105,31 @@
                   </a></h5>
                 </div>
               </div>
+
+              <!--row 8-->
+              <div class="row">
+                <div class=".one-half.column">
+                  <h5 class="blogpost"><a href="">
+                    </a></h5>
+                  </div>
+                <div class=".one-half.column">
+                  <h5 class="blogpost"><a href="https://emilyparkes.github.io/blog/c7-motivation.html">
+                    Motivation</a></h5>
+                  </div>
+                </div>
+
+                <!--row 9-->
+                <div class="row">
+                  <div class=".one-half.column">
+                    <h5 class="blogpost"><a href="">
+                      </a></h5>
+                    </div>
+                  <div class=".one-half.column">
+                    <h5 class="blogpost"><a href="">
+                      </a></h5>
+                    </div>
+                  </div>
+
 
 
 
